@@ -5,7 +5,6 @@ use Valiant::Validations;
 use Valiant::I18N;
 
 extends 'Person';
-with 'TestRole';
 
 has 'retirement_date' => (is=>'ro');
 
@@ -17,6 +16,13 @@ validates 'retirement_date' => (
 );
 
 validates_with 'Custom', notes=>'123';
+
+validates_with sub {
+  my ($self) = @_;
+  $self->errors->add(undef, 'Failed Retiree validation');
+  $self->errors->add('name', 'bad retiree name');
+};
+
 
 validates ['age', 'name'], sub {
   my ($self, $attr_name, $value) = @_;
@@ -33,5 +39,7 @@ validates 'name' => (
   },
   if => sub { 1 },
 );
+
+with 'TestRole';  # put this here to test proper ordering
 
 1;
